11-10-08: see #934, split sim-locale into 2 fields
11-7-08: cleanup up the layout of AutomaticUpdateDialog to make it less overwhelming
11-6-08: clean up formatting methods in PhetVersion, remove knowledge of About dialog
11-6-08: #917, add sim type (java or flash) to SessionStartMessage
10-31-2008: remove obsolete keys from English strings file
7-19-2007: Fixed ModuleManager to just count unique instances of clocks for purposes of verifying the number of running clocks
7-19-2007: Fixed ModuleManager to check that no clock is shared between modules